--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <img id="logo" />
         <div class="main-navigation">
           <ul class="main-navigation-ul">
-            <li><a href="">Imagens</a></li>
-            <li><a href="">Videos</a></li>
-            <li><a href="">Promoções</a></li>
+            <li><a href="">Home</a></li>
+            <li><a href="">Sobre nós</a></li>
+            <li><a href="">Projetos</a></li>
             <li><a href="">Novidades</a></li>
             <li><a href="">Contato</a></li>
           </ul>
@@ -32,5 +32,7 @@
         </script>
       </div>
     </nav>
+    <script src="js/jquery-3.6.1.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
