--- a/index.html
+++ b/index.html
@@ -32,6 +32,30 @@
         </script>
       </div>
     </nav>
+
+    <section class="section-top-banner">
+      <div class="top-banner__inner site-container">
+        <div class="top-banner__image">
+          <img
+            class="image"
+            src="https://i.pinimg.com/originals/89/f8/f5/89f8f5c7a0303a768e44f809bdf6b28a.jpg"
+          />
+        </div>
+        <div class="top-banner__text">
+          <div class="top-banner__text-up">
+            <span class="top-banner__span">Olá, me chamo</span>
+            <h2 class="top-banner__h2">Alex</h2>
+          </div>
+          <div class="top-banner__text-down">
+            <h2 class="top-banner__text-h2">Rodrigues</h2>
+            <span class="top-banner__span2">Texto Sobre mim</span>
+          </div>
+          <p>Alguma frase de impacto bem bacana</p>
+          <a href="#" class="a-button">Leia Mais</a>
+        </div>
+      </div>
+    </section>
+
     <script src="js/jquery-3.6.1.min.js"></script>
     <script src="js/script.js"></script>
   </body>
