--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <ul class="main-navigation-ul">
             <li><a href="">Home</a></li>
             <li><a href="">Sobre nós</a></li>
-            <li><a href="">Projetos</a></li>
+            <li><a href="">Revenda nossas Bijukas</a></li>
             <li><a href="">Novidades</a></li>
             <li><a href="">Contato</a></li>
           </ul>
@@ -44,14 +44,28 @@
         <div class="top-banner__text">
           <div class="top-banner__text-up">
             <span class="top-banner__span">Olá, me chamo</span>
-            <h2 class="top-banner__h2">Alex</h2>
+            <h2 class="top-banner__h2">Bijuka</h2>
           </div>
           <div class="top-banner__text-down">
-            <h2 class="top-banner__text-h2">Rodrigues</h2>
-            <span class="top-banner__span2">Texto Sobre mim</span>
+            <h2 class="top-banner__text-h2">Kaká Rodrigues</h2>
+            <span class="top-banner__span2"
+              >Sou simplesmente fascinada pelo que faço.</span
+            >
           </div>
-          <p>Alguma frase de impacto bem bacana</p>
-          <a href="#" class="a-button">Leia Mais</a>
+          <p class="top-banner__p">
+            Adoro criar bijouterias para todos os mais diversos gostos!
+          </p>
+          <a href="#" class="a-button" onclick="menuFn(this)">Leia Mais</a>
+        </div>
+        <div class="text-leiamais">
+          <ul class="text-leiamais-ul">
+            <li><a href="">Home</a></li>
+            <li>
+              Oi, eu sou a Kaká, tenho 10 anos, seja bem vindo ao meu site,<br />
+              estou muito feliz em mostrar para você um pouco mais do meu
+              trabalho.
+            </li>
+          </ul>
         </div>
       </div>
     </section>
