Ajustes de menus e botões

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <img id="logo" />
         <div class="main-navigation">
           <ul class="main-navigation-ul">
-            <li><a href="">Home</a></li>
-            <li><a href="">Sobre nós</a></li>
-            <li><a href="">Revenda nossas Bijukas</a></li>
+            <li><a href="">Início</a></li>
+            <li><a href="">Galeria</a></li>
+            <li><a href="">Seja uma revendedora Bijuka</a></li>
             <li><a href="">Novidades</a></li>
             <li><a href="">Contato</a></li>
           </ul>
@@ -47,23 +47,30 @@
             <h2 class="top-banner__h2">Bijuka</h2>
           </div>
           <div class="top-banner__text-down">
-            <h2 class="top-banner__text-h2">Kaká Rodrigues</h2>
+            <h2 class="top-banner__text-h2">Bijouterias originais</h2>
+            <br />
             <span class="top-banner__span2"
-              >Sou simplesmente fascinada pelo que faço.</span
+              >"Sou simplesmente fascinada pelo que faço...</span
             >
           </div>
           <p class="top-banner__p">
-            Adoro criar bijouterias para todos os mais diversos gostos!
+            Adoro criar bijouterias dos mais diversos tipos <br />
+            e para todos os gostos!""
           </p>
+          <br />
           <a href="#" class="a-button" onclick="menuFn(this)">Leia Mais</a>
         </div>
         <div class="text-leiamais">
           <ul class="text-leiamais-ul">
-            <li><a href="">Home</a></li>
+            <li><a href="">Início</a></li>
+            <br />
             <li>
-              Oi, eu sou a Kaká, tenho 10 anos, seja bem vindo ao meu site,<br />
-              estou muito feliz em mostrar para você um pouco mais do meu
-              trabalho.
+              Oi, eu sou a Kaká, tenho 10 anos, sejam bem vindos à minha
+              página!<br />
+              Fico muito feliz em apresentar para vocês um pouco do meu
+              trabalho. <br />
+              Adoro criar bijouterias de diversos tipos e para todos os gostos,
+              divirtam-se com a minha coleção!
             </li>
           </ul>
         </div>
