Adição de imagens e funções

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <div class="main-navigation">
           <ul class="main-navigation-ul">
             <li><a href="">Início</a></li>
-            <li><a href="">Galeria</a></li>
+            <li>
+              <a href="#" class="galeria-btn" onclick="menuFn(this)">Galeria</a>
+            </li>
             <li><a href="">Seja uma revendedora Bijuka</a></li>
             <li><a href="">Novidades</a></li>
             <li><a href="">Contato</a></li>
@@ -47,14 +49,14 @@
             <h2 class="top-banner__h2">Bijuka</h2>
           </div>
           <div class="top-banner__text-down">
-            <h2 class="top-banner__text-h2">Bijouterias originais</h2>
+            <h2 class="top-banner__text-h2">A arte de criar bijuterias</h2>
             <br />
             <span class="top-banner__span2"
               >"Sou simplesmente fascinada pelo que faço...</span
             >
           </div>
           <p class="top-banner__p">
-            Adoro criar bijouterias dos mais diversos tipos <br />
+            Adoro criar bijuterias dos mais diversos tipos <br />
             e para todos os gostos!""
           </p>
           <br />
@@ -62,17 +64,37 @@
         </div>
         <div class="text-leiamais">
           <ul class="text-leiamais-ul">
-            <li><a href="">Início</a></li>
+            <li><a href="">Voltar</a></li>
             <br />
             <li>
               Oi, eu sou a Kaká, tenho 10 anos, sejam bem vindos à minha
               página!<br />
               Fico muito feliz em apresentar para vocês um pouco do meu
               trabalho. <br />
-              Adoro criar bijouterias de diversos tipos e para todos os gostos,
+              Adoro criar bijuterias de diversos tipos e para todos os gostos,
               divirtam-se com a minha coleção!
             </li>
           </ul>
+        </div>
+        <!--Aqui vai a página a galeria-->
+        <div class="galeria">
+          <div class="flex-galeria">
+            <img class="flex-item" src="img/1.jpeg" />
+            <img class="flex-item" src="img/2.jpeg" />
+            <img class="flex-item" src="img/3.jpeg" />
+            <img class="flex-item" src="img/4.jpeg" />
+            <img class="flex-item" src="img/5.jpeg" />
+            <img class="flex-item" src="img/6.jpeg" />
+            <img class="flex-item" src="img/7.jpeg" />
+            <img class="flex-item" src="img/8.jpeg" />
+            <img class="flex-item" src="img/9.jpeg" />
+            <img class="flex-item" src="img/10.jpeg" />
+            <img class="flex-item" src="img/11.jpeg" />
+            <img class="flex-item" src="img/12.jpeg" />
+            <button type="submit" class="btn-sair-galeria" onclick="menuFn" ()>
+              Sair
+            </button>
+          </div>
         </div>
       </div>
     </section>
