--- a/index.html
+++ b/index.html
@@ -78,30 +78,29 @@
         </div>
         <!--Aqui vai a página a galeria-->
         <div class="galeria">
-          <div class="flex-galeria">
-            <a class="flex-image" href="#">
-              <img class="flex-item" src="img/1.jpeg" />
-              <img class="flex-item" src="img/2.jpeg" />
-              <img class="flex-item" src="img/3.jpeg" />
-              <img class="flex-item" src="img/4.jpeg" />
-              <img class="flex-item" src="img/5.jpeg" />
-              <img class="flex-item" src="img/6.jpeg" />
-              <img class="flex-item" src="img/7.jpeg" />
-              <img class="flex-item" src="img/8.jpeg" />
-              <img class="flex-item" src="img/9.jpeg" />
-              <img class="flex-item" src="img/10.jpeg" />
-              <img class="flex-item" src="img/11.jpeg" />
-              <img class="flex-item" src="img/12.jpeg" />
-            </a>
-            <button
-              type="submit"
-              class="btn-sair-galeria"
-              onclick="menuFn
+          <img class="flex-item" src="img/1.jpeg" />
+          <img class="flex-item" src="img/2.jpeg" />
+          <img class="flex-item" src="img/3.jpeg" />
+          <img class="flex-item" src="img/4.jpeg" />
+          <img class="flex-item" src="img/5.jpeg" />
+          <img class="flex-item" src="img/6.jpeg" />
+          <img class="flex-item" src="img/7.jpeg" />
+          <img class="flex-item" src="img/8.jpeg" />
+          <img class="flex-item" src="img/9.jpeg" />
+          <img class="flex-item" src="img/10.jpeg" />
+          <img class="flex-item" src="img/11.jpeg" />
+          <img class="flex-item" src="img/12.jpeg" />
+
+          <button class="btn-left" onclick="plusDivs(-1)">&#10094;</button>
+          <button class="btn-right" onclick="plusDivs(1)">&#10095;</button>
+          <button
+            type="submit"
+            class="btn-sair-galeria"
+            onclick="menuFn
               (this)"
-            >
-              Sair
-            </button>
-          </div>
+          >
+            Sair
+          </button>
         </div>
       </div>
     </section>
