--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="top-banner__text">
           <div class="top-banner__text-up">
-            <span class="top-banner__span">Olá, me chamo</span>
+            <span class="top-banner__span">Olá, bem vindos a</span>
             <h2 class="top-banner__h2">Bijuka</h2>
           </div>
           <div class="top-banner__text-down">
