--- a/index.html
+++ b/index.html
@@ -1,143 +1,119 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Terceiro Projeto</title>
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
-  <body>
-    <nav class="navigation">
-      <div class="navigation-inner">
-        <img id="logo" />
-        <div class="main-navigation">
-          <ul class="main-navigation-ul">
-            <li><a href="">Início</a></li>
-            <li>
-              <a href="#" class="galeria-btn" onclick="menuFn(this)">Galeria</a>
-            </li>
-            <li><a href="">Seja uma revendedora Bijuka</a></li>
-            <li><a href="">Novidades</a></li>
-            <li>
-              <a href="#" class="btn-contato" onclick="menuFn(this)">Contato</a>
-            </li>
-          </ul>
-        </div>
-        <div id="btnBurguer" class="burguer-container" onclick="menuFn(this)">
-          <div class="bar1"></div>
-          <div class="bar2"></div>
-          <div class="bar3"></div>
-        </div>
-        <script>
-          function menuFn(x) {
-            x.classList.toggle("change");
-          }
-        </script>
-      </div>
-    </nav>
 
-    <section class="section-top-banner">
-      <div class="top-banner__inner site-container">
-        <div class="top-banner__image">
-          <img
-            class="image"
-            src="https://i.pinimg.com/originals/89/f8/f5/89f8f5c7a0303a768e44f809bdf6b28a.jpg"
-          />
-        </div>
-        <div class="top-banner__text">
-          <div class="top-banner__text-up">
-            <span class="top-banner__span">Olá, bem vindos a</span>
-            <h2 class="top-banner__h2">Bijuka</h2>
-          </div>
-          <div class="top-banner__text-down">
-            <h2 class="top-banner__text-h2">A arte de criar bijuterias</h2>
-            <br />
-            <span class="top-banner__span2"
-              >"Sou simplesmente fascinada pelo que faço...</span
-            >
-          </div>
-          <p class="top-banner__p">
-            Adoro criar bijuterias dos mais diversos tipos <br />
-            e para todos os gostos!""
-          </p>
-          <br />
-          <a href="#" class="a-button" onclick="menuFn(this)">Leia Mais</a>
-        </div>
-        <div class="text-leiamais">
-          <ul class="text-leiamais-ul">
-            <li><a href="">Voltar</a></li>
-            <br />
-            <li>
-              Oi, eu sou a Kaká, tenho 10 anos, sejam bem vindos à minha
-              página!<br />
-              Fico muito feliz em apresentar para vocês um pouco do meu
-              trabalho. <br />
-              Adoro criar bijuterias de diversos tipos e para todos os gostos,
-              divirtam-se com a minha coleção!
-            </li>
-          </ul>
-        </div>
-        <!--Aqui vai a galeria-->
-        <div class="galeria">
-          <img class="flex-item" src="img/1.jpeg" />
-          <img class="flex-item" src="img/2.jpeg" />
-          <img class="flex-item" src="img/3.jpeg" />
-          <img class="flex-item" src="img/4.jpeg" />
-          <img class="flex-item" src="img/5.jpeg" />
-          <img class="flex-item" src="img/6.jpeg" />
-          <img class="flex-item" src="img/7.jpeg" />
-          <img class="flex-item" src="img/8.jpeg" />
-          <img class="flex-item" src="img/9.jpeg" />
-          <img class="flex-item" src="img/10.jpeg" />
-          <img class="flex-item" src="img/11.jpeg" />
-          <img class="flex-item" src="img/12.jpeg" />
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bijuka</title>
+  <link rel="stylesheet" href="css/style.css" />
+</head>
 
-          <button class="btn-left" onclick="plusDivs(-1)">&#10094;</button>
-          <button class="btn-right" onclick="plusDivs(1)">&#10095;</button>
-          <button
-            type="submit"
-            class="btn-sair-galeria"
-            onclick="menuFn (this)"
-          >
-            Sair
-          </button>
-        </div>
+<body>
+  <nav class="navigation">
+    <div class="navigation-inner">
+      <img id="logo" />
+      <div class="main-navigation">
+        <ul class="main-navigation-ul">
+          <li><a href="">Início</a></li>
+          <li>
+            <a href="#" class="galeria-btn" onclick="menuFn(this)">Galeria</a>
+          </li>
+          <li><a href="">Seja uma revendedora Bijuka</a></li>
+          <li><a href="">Novidades</a></li>
+          <li>
+            <a href="#" class="btn-contato" onclick="menuFn(this)">Contato</a>
+          </li>
+        </ul>
       </div>
-    </section>
-    <div class="formulario">
-      <form class="form-all" action="#" method="get" onsubmit="abrirWhatsapp()">
-        <input type="text" name="nome" id="nome" placeholder="Nome" required />
-        <br />
-        <input
-          type="tel"
-          name="telefone"
-          id="telefone"
-          placeholder="Telefone"
-          required
-        />
-        <br />
-        <input
-          type="email"
-          name="email"
-          id="email"
-          placeholder="E-mail"
-          required
-        />
-        <br />
-        <textarea
-          name="msg"
-          id="msg"
-          placeholder="Mensagem"
-          rows="5"
-          required
-        ></textarea>
-        <br />
-        <button type="submit" class="btn-enviar">Enviar Whatsapp</button>
-      </form>
+      <div id="btnBurguer" class="burguer-container" onclick="menuFn(this)">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </div>
+      <script>
+        function menuFn(x) {
+          x.classList.toggle("change");
+        }
+      </script>
     </div>
+  </nav>
 
-    <script src="js/jquery-3.6.1.min.js"></script>
-    <script src="js/script.js"></script>
-  </body>
+  <section class="section-top-banner">
+    <div class="top-banner__inner site-container">
+      <div class="top-banner__image">
+        <img class="image" src="https://i.pinimg.com/originals/89/f8/f5/89f8f5c7a0303a768e44f809bdf6b28a.jpg" />
+      </div>
+      <div class="top-banner__text">
+        <div class="top-banner__text-up">
+          <span class="top-banner__span">Olá, bem vindos a</span>
+          <h2 class="top-banner__h2">Bijuka</h2>
+        </div>
+        <div class="top-banner__text-down">
+          <h2 class="top-banner__text-h2">A arte de criar bijuterias</h2>
+          <br />
+          <span class="top-banner__span2">"Sou simplesmente fascinada pelo que faço...</span>
+        </div>
+        <p class="top-banner__p">
+          Adoro criar bijuterias dos mais diversos tipos <br />
+          e para todos os gostos!""
+        </p>
+        <br />
+        <a href="#" class="a-button" onclick="menuFn(this)">Leia Mais</a>
+      </div>
+      <div class="text-leiamais">
+        <ul class="text-leiamais-ul">
+          <li><a href="">Voltar</a></li>
+          <br />
+          <li>
+            Oi, eu sou a Kaká, tenho 10 anos, sejam bem vindos à minha
+            página!<br />
+            Fico muito feliz em apresentar para vocês um pouco do meu
+            trabalho. <br />
+            Adoro criar bijuterias de diversos tipos e para todos os gostos,
+            divirtam-se com a minha coleção!
+          </li>
+        </ul>
+      </div>
+      <!--Aqui vai a galeria-->
+      <div class="galeria">
+        <img class="flex-item" src="img/1.jpeg" />
+        <img class="flex-item" src="img/2.jpeg" />
+        <img class="flex-item" src="img/3.jpeg" />
+        <img class="flex-item" src="img/4.jpeg" />
+        <img class="flex-item" src="img/5.jpeg" />
+        <img class="flex-item" src="img/6.jpeg" />
+        <img class="flex-item" src="img/7.jpeg" />
+        <img class="flex-item" src="img/8.jpeg" />
+        <img class="flex-item" src="img/9.jpeg" />
+        <img class="flex-item" src="img/10.jpeg" />
+        <img class="flex-item" src="img/11.jpeg" />
+        <img class="flex-item" src="img/12.jpeg" />
+
+        <button class="btn-left" onclick="plusDivs(-1)">&#10094;</button>
+        <button class="btn-right" onclick="plusDivs(1)">&#10095;</button>
+        <button type="submit" class="btn-sair-galeria" onclick="menuFn (this)">
+          Sair
+        </button>
+      </div>
+    </div>
+  </section>
+  <div class="formulario">
+    <form class="form-all" action="#" method="get" onsubmit="abrirWhatsapp()">
+      <input type="text" name="nome" id="nome" placeholder="Nome" required />
+      <br />
+      <input type="tel" name="telefone" id="telefone" placeholder="Telefone" required />
+      <br />
+      <input type="email" name="email" id="email" placeholder="E-mail" required />
+      <br />
+      <textarea name="msg" id="msg" placeholder="Mensagem" rows="5" required></textarea>
+      <br />
+      <button type="submit" class="btn-enviar">Enviar Whatsapp</button>
+    </form>
+  </div>
+
+  <script src="js/jquery-3.6.1.min.js"></script>
+  <script src="js/script.js"></script>
+</body>
+
 </html>
