add function fechar modal

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       </div>
       <div class="text-leiamais">
         <ul class="text-leiamais-ul">
-          <li><a href="">Voltar</a></li>
+          <button class="btn-voltar" id="btn-voltar">Voltar</button>
           <br />
           <li>
             Oi, eu sou a Kaká, tenho 10 anos, sejam bem vindos à minha
