--- a/index.html
+++ b/index.html
@@ -31,11 +31,6 @@
         <div class="bar2"></div>
         <div class="bar3"></div>
       </div>
-      <script>
-        function menuFn(x) {
-          x.classList.toggle("change");
-        }
-      </script>
     </div>
   </nav>
 
@@ -75,6 +70,7 @@
           </li>
         </ul>
       </div>
+      
       <!--Aqui vai a galeria-->
       <div class="galeria">
         <img class="flex-item" src="img/1.jpeg" />
@@ -113,7 +109,7 @@
   </div>
 
   <script src="js/jquery-3.6.1.min.js"></script>
-  <script src="js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
