--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   </div>
 
   <script src="js/jquery-3.6.1.min.js"></script>
-  <script src="./js/script.js"></script>
+  <script src="./js/jquery-3.6.4.min.js"></script>
 </body>
 
 </html>
