--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         <div class="bar2"></div>
         <div class="bar3"></div>
       </div>
+      <script>
+        function menuFn(x) {
+          x.classList.toggle("change");
+        }
+      </script>
     </div>
   </nav>
 
@@ -58,7 +63,7 @@
       </div>
       <div class="text-leiamais">
         <ul class="text-leiamais-ul">
-          <button class="btn-voltar" id="btn-voltar">Voltar</button>
+          <li><a href="">Voltar</a></li>
           <br />
           <li>
             Oi, eu sou a Kaká, tenho 10 anos, sejam bem vindos à minha
@@ -70,7 +75,6 @@
           </li>
         </ul>
       </div>
-      
       <!--Aqui vai a galeria-->
       <div class="galeria">
         <img class="flex-item" src="img/1.jpeg" />
@@ -109,7 +113,7 @@
   </div>
 
   <script src="js/jquery-3.6.1.min.js"></script>
-  <script src="./js/jquery-3.6.4.min.js"></script>
+  <script src="js/script.js"></script>
 </body>
 
 </html>
