--- a/página2.html
+++ b/página2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bijuka</title>
     <link rel="stylesheet" href="./css/style2.css">
-   
+	
 </head>
 <body>
 
@@ -33,8 +33,8 @@
     </p>
 </footer>
 
-<link rel="stylesheet" href="./js/script.js">
-<link rel="stylesheet" href="./js/jquery-3.6.4.min.js">
+<script src="./js/script.js"></script>
+<script src="./js/jquery-3.6.4.min.js"></script>
 
 
 </body>
