--- a/página2.html
+++ b/página2.html
@@ -14,7 +14,7 @@
 
 <nav class="nav">
 	<ul>
-		<li><a href="./index.html" target="_blank">Start</a>
+		<li><a href="./index.html" target="_blank">Início</a>
     <li><a href="#">O nas</a>
 		<li class="drop"><a href="#">Oferta</a>
 			<ul class="dropdown">
@@ -33,8 +33,9 @@
     </p>
 </footer>
 
-<script src="./js/script.js"></script>
-<script src="./js/jquery-3.6.4.min.js"></script>
+<script src="./js/script2.js"></script>
+<script src="./js/jquery-3.6.1.min.js"></script>
+
 
 
 </body>
