--- a/página2.html
+++ b/página2.html
@@ -15,7 +15,7 @@
 <nav class="nav">
 	<ul>
 		<li><a href="./index.html" target="_blank">Início</a>
-    <li><a href="#">O nas</a>
+    	<li><a href="#">O nas</a></li>
 		<li class="drop"><a href="#">Oferta</a>
 			<ul class="dropdown">
 				<li><a href="#">Oferta 01</a></li>
@@ -23,8 +23,8 @@
 				<li><a href="#">Oferta 03</a></li>
 			</ul>
 		</li>
-		<li><a href="#">Aktualności</a>
-		<li><a href="#">Kontakt</a>
+		<li><a href="#">Aktualności</a></li>
+		<li><a href="#">Kontakt</a></li>
 	</ul>
 </nav>
 <footer>
@@ -35,8 +35,6 @@
 
 <script src="./js/script2.js"></script>
 <script src="./js/jquery-3.6.1.min.js"></script>
-
-
 
 </body>
 </html>
