ajustando cores e formulário

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <section class="section-top-banner">
     <div class="top-banner__inner site-container">
       <div class="top-banner__image">
-        <img class="image" src="https://i.pinimg.com/originals/89/f8/f5/89f8f5c7a0303a768e44f809bdf6b28a.jpg" />
+        <img class="imagem" src="https://i.pinimg.com/originals/89/f8/f5/89f8f5c7a0303a768e44f809bdf6b28a.jpg" />
       </div>
       <div class="top-banner__text">
         <div class="top-banner__text-up">
@@ -66,12 +66,7 @@
           <li><a href="">Voltar</a></li>
           <br />
           <li>
-            Oi, eu sou a Kaká, tenho 10 anos, sejam bem vindos à minha
-            página!<br />
-            Fico muito feliz em apresentar para vocês um pouco do meu
-            trabalho. <br />
-            Adoro criar bijuterias de diversos tipos e para todos os gostos,
-            divirtam-se com a minha coleção!
+            A diversidade é uma das nossas maiores inspirações. Nossa coleção oferece uma ampla variedade de cores, estilos e formas, permitindo que você crie combinações únicas e experimente novas possibilidades de moda. Deixe sua imaginação voar e descubra o mundo fascinante das bijuterias Bijuka!
           </li>
         </ul>
       </div>
@@ -99,6 +94,7 @@
     </div>
   </section>
   <div class="formulario">
+    <h2 class="form_titulo">Envie uma mensagem</h2>
     <form class="form-all" action="#" method="get" onsubmit="abrirWhatsapp()">
       <input type="text" name="nome" id="nome" placeholder="Nome" required />
       <br />
